prepare for publishing

--- a/02-algorithm.ipynb
+++ b/02-algorithm.ipynb
@@ -808,12 +808,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Algorithm implementation implements fit-predict interface.\n",
-    "\n",
-    "<details>\n",
-    "  <summary><i>Secret knowledge</i></summary>\n",
-    "  <img src=\"rosenblatt.png\" width=\"1000\" height=\"400\"></img>\n",
-    "</details>"
+    "Algorithm implementation implements fit-predict interface."
    ]
   },
   {
